components/organisms/PokemonView/PokemonView.module.scss
.pokemonView {
  height: 65vh;
  position: relative;
  .pokemonImg {
    margin: auto;
    width: 76%;
    height: 60%;
    max-width: 265px;
    position: absolute;
    left: 0;
    bottom: 0;
    right: 0;
    z-index: 10;
  }
  .pokemonShadow {
    height: 100px;
    width: 100px;
    position: absolute;
    top: 60%;
    &--previous {
      left: 0;
      transform: translateX(-35%);
    }
    &--next {
      right: 0;
      transform: translateX(35%);
    }
  }
}

